--- a/index.html
+++ b/index.html
@@ -24,4 +24,4 @@
     <iframe src="https://form-c.netlify.app/"></iframe>
 </body>
 
-</html>Ihave to send this project in web view what is its mean
+</html>
